--- a/markdown-note-taking/public/css/styles.css
+++ b/markdown-note-taking/public/css/styles.css
@@ -76,3 +76,66 @@ li button {
 li button:hover {
   background-color: #218838;
 }
+
+#grammer-btn {
+  background-color: #d3e73c;
+  color: #333;
+}
+
+#grammer-btn:hover {
+  background-color: #d3e73cd8;
+}
+
+#render-btn {
+  background-color: #007bff;
+}
+
+#render-btn:hover {
+  background-color: #0056b3;
+}
+
+#delete-btn {
+  background-color: #e74c3c;
+}
+
+#delete-btn:hover {
+  background-color: #e74d3cd6;
+}
+
+.error-container, .feedback-container {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.error-container h1 {
+  color: #e74c3c;
+  margin-bottom: 10px;
+}
+
+.feedback-container h1 {
+  color: #218838;
+  margin-bottom: 10px;
+}
+
+.error-container p, .feedback-container p {
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.error-container a, .feedback-container a {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.error-container a:hover, .feedback-container a:hover {
+  background-color: #0056b3;
+}
